# udown

./: .coveragerc  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: check-pr-desc.yml  check-verison.yml  release.yml  test.yml  validate-pr-description.yml  validate-pr.yml  version-check.yml
scripts/: activate_env.sh  build-package.py  build-package.sh  check_format.sh  clean.sh  create-tag.sh  format.sh  install.sh  lint.sh  publish-test.sh  quality.sh  show_cli_help.sh  test.sh  typecheck.sh
tests/: test_downloader.py
ytdl/: __init__.py  cli.py  downloader.py  profiler.py  utils.py
